[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
authors = ["Noah Choi"]
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.2.1"
actix-rt="2.7.0"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

